20250130
Commit:
-Login screen
-Slider Panel with descriptions
-TreeView component updated